# vossvolvox-rust

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  ROADMAP.md  build.rs
src/: lib.rs  main.rs
src/voxel_grid/: analyze.rs  geometry.rs  grid.rs  info.rs  manip.rs  mrc_output.rs  pdb.rs  pdb_output.rs  raster.rs  surface_area.rs  utils.rs
test/: test_pdb_to_xyzr.sh  test_volume_rust.sh
