[package]
name = "voxel_sphere"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
indicatif = "0.17.11"
regex = "1.11.0"
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.12.8", features = ["blocking"] }
flate2 = "1.0.34"
tempfile = "3.12.0"
